# sccache

./: Cargo.toml  appveyor.yml
src/: lib.rs  protocol.rs  server.rs  util.rs
src/compiler/: c.rs  compiler.rs  mod.rs  msvc.rs  msvc_support.rs
tests/: sccache_cargo.rs  sccache_msvc_ninja.rs  test_cmake_configure.bat
tests/test-args/: Cargo.toml  bar.rsp  foo.rsp
tests/test-args/src/: main.rs
tests/test-cmake/: CMakeLists.txt  app_exe_replacer.cpp  app_hello_world.cpp  bye_world.cpp  cc.bat  hello_world.cpp  hello_world.h
tests/test-cmake/src/: app_hello_world.cpp
testutils/: Cargo.toml
testutils/src/: lib.rs
